fix clipping of context menu hovers

--- a/WebfrontCore/wwwroot/css/src/main.scss
+++ b/WebfrontCore/wwwroot/css/src/main.scss
@@ -361,7 +361,7 @@ table {
   background-color: var(--lm-base-body-bg-color);
   padding: 0.5rem;
   height: 90%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .dark-mode .on-this-page-nav {
